replace flexbox gap with margin

--- a/src/components/ScrollToTop/index.astro
+++ b/src/components/ScrollToTop/index.astro
@@ -11,7 +11,7 @@ import Icon from "../@common/Icon.astro";
     max-md:hidden
     hidden
     items-center
-    gap-[7px]
+    space-x-[7px]
     px-2
     py-[5px]
     text-label-small
