--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -44,7 +44,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               Voici comment nous travaillons
             </h3>
             <ul
-              class="flex flex-col gap-11 lg:gap-0 lg:flex-row items-center justify-between isolate"
+              class="flex flex-col max-lg:space-y-11 lg:flex-row lg:space-x-11 items-center justify-between isolate"
             >
               <li>
                 <Brush
