--- a/src/components/pages/notre-manifeste/Actions.astro
+++ b/src/components/pages/notre-manifeste/Actions.astro
@@ -21,7 +21,7 @@ import Brush from "../../@common/Brush.astro";
         {
           data.actions.map((action) => {
             return (
-              <li class="break-inside-avoid	flex flex-col gap-5 p-5 lg:p-10 bg-surface7 rounded-[26px]">
+              <li class="break-inside-avoid	flex flex-col space-y-5 p-5 lg:p-10 bg-surface7 rounded-[26px]">
                 <h3 class="text-headline-medium lg:text-headline-medium-bold">
                   {action.title}
                 </h3>
