--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -7,7 +7,7 @@ import CallToAction from "../../@common/CallToAction.astro";
   <Grid>
     <div class="col-span-full lg:col-start-2 lg:col-span-6">
       <div
-        class="flex flex-col gap-8 lg:gap-5 p-5 lg:p-10 bg-neutral4 rounded-[26px]"
+        class="flex flex-col max-lg:space-y-8 lg:space-y-5 p-5 lg:p-10 bg-neutral4 rounded-[26px]"
       >
         <h2 class="text-headline-small">Arborescence principale :</h2>
         <ul class="ml-7 list-disc list-outside !text-body-medium">
