--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -30,10 +30,10 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
 ---
 
 <div
-  class="project flex flex-col gap-8 lg:gap-0 px-5 py-6 lg:p-10 bg-neutral4 rounded-[26px]"
+  class="project flex flex-col max-lg:space-y-8 px-5 py-6 lg:p-10 bg-neutral4 rounded-[26px]"
 >
-  <div class="flex flex-col lg:flex-row gap-8">
-    <div class="flex flex-col gap-8 lg:flex-[0_0_40%]">
+  <div class="flex flex-col max-lg:space-y-8 lg:flex-row lg:space-x-8">
+    <div class="flex flex-col space-y-8 lg:flex-[0_0_40%]">
       <Image
         class="rounded-[12px] border border-neutral3"
         srcSet={[
@@ -55,11 +55,11 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
           {project.activity}
         </p>
       </div>
-      <ul class="flex flex-wrap gap-2.5">
+      <ul class="flex flex-wrap -mx-[5px]">
         {
           project.skills.map((skill) => {
             return (
-              <li>
+              <li class="m-[5px]">
                 <Tag name={skill} />
               </li>
             );
@@ -68,7 +68,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
       </ul>
     </div>
     <div
-      class="flex flex-col gap-5 px-5 py-6 lg:p-10 bg-surface5 rounded-[20px]"
+      class="flex flex-col space-y-5 px-5 py-6 lg:p-10 bg-surface5 rounded-[20px]"
     >
       <h3 class="text-headline-medium-bold lg:text-headline-large">
         {project.description.title}
@@ -99,7 +99,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
               )}
 
               {hasManyTestimonials && (
-                <ul class="flex flex-col gap-2.5">
+                <ul class="flex flex-col space-y-2.5">
                   {project.testimonial.map((testimonial) => {
                     return (
                       <li>
@@ -129,19 +129,19 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
           variant="transparent"
           class="underline w-full cursor-pointer"
         >
-          <span class="closed flex items-center gap-1.5 ">
-            Afficher la galerie de ce projet
+          <span class="closed flex items-center space-x-1.5 ">
+            <span>Afficher la galerie de ce projet</span>
             <Icon name="visibility" width={22} height={22} />
           </span>
 
-          <span class="opened flex items-center gap-1.5">
-            Fermer la galerie
+          <span class="opened flex items-center space-x-1.5">
+            <span>Fermer la galerie</span>
             <Icon name="cross" width={18} height={18} />
           </span>
         </CallToAction>
 
-        <div class="gallery flex flex-col gap-14 mt-8">
-          <ul class="flex flex-col lg:flex-row max-lg:gap-12 gap-4">
+        <div class="gallery flex flex-col space-y-14 mt-8">
+          <ul class="flex flex-col max-lg:space-y-12 lg:flex-row lg:space-x-4">
             {new Array(3).fill(0).map((_, index, array) => {
               const imageIndex = index + 1;
 
@@ -177,7 +177,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
               );
             })}
           </ul>
-          <div class="flex gap-2.5">
+          <div class="flex space-x-2.5">
             <span role="presentation">
               <Icon name="photo_prints" width={24} height={24} />
             </span>
