--- a/src/components/pages/homepage/Expertises/Expertise.astro
+++ b/src/components/pages/homepage/Expertises/Expertise.astro
@@ -10,10 +10,10 @@ interface Props {
 const { expertise } = Astro.props;
 ---
 
-<div class="flex gap-5 flex-col p-6 lg:p-10 rounded-[26px] bg-neutral4">
+<div class="flex flex-col space-y-5 p-6 lg:p-10 rounded-[26px] bg-neutral4">
   <h3 class="text-headline-medium-bold">{expertise.name}</h3>
   <p class="text-body-large">{expertise.description}</p>
-  <ul class="flex flex-col gap-0.5">
+  <ul class="flex flex-col space-y-0.5">
     {
       expertise.skills.map((skill) => {
         return (
