--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -21,7 +21,7 @@ import Expertise from "./Expertise.astro";
       </h2>
 
       <ul
-        class="col-span-full lg:col-start-1 2xl:col-start-2 lg:col-span-7 2xl:col-span-5 flex flex-col gap-8"
+        class="col-span-full lg:col-start-1 2xl:col-start-2 lg:col-span-7 2xl:col-span-5 flex flex-col space-y-8"
       >
         {
           data.expertises.map((expertise, index) => {
