--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -30,11 +30,11 @@ const { project } = Astro.props;
   <h3 class="mb-8 text-headline-medium-bold">
     {project.title}
   </h3>
-  <ul class="flex flex-wrap gap-2.5">
+  <ul class="flex flex-wrap -mx-[5px]">
     {
       project.skills.map((skill) => {
         return (
-          <li>
+          <li class="m-[5px]">
             <Tag name={skill} />
           </li>
         );
