--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -139,7 +139,8 @@ const isSelected = items.some(
 
     display: none;
     position: absolute;
-    padding-block: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
     left: 50%;
     top: calc(100% + 6px);
     transform: translateX(-50%);
