--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -176,13 +176,15 @@ import NavItems from "./NavItems.astro";
 
   @screen 2xl {
     header {
-      margin-inline: -40px;
+      margin-left: -40px;
+      margin-right: -40px;
     }
   }
 
   @screen lg {
     header {
-      margin-inline: 9px;
+      margin-left: 9px;
+      margin-right: 9px;
       border-radius: 0 0 16px 16px;
     }
 
