--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -232,7 +232,8 @@ const { block1, block2 } = data;
       width: 120px;
 
       img {
-        margin-inline: auto;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
   }
