--- a/src/components/pages/homepage/Expertises/Expertise.astro
+++ b/src/components/pages/homepage/Expertises/Expertise.astro
@@ -28,11 +28,11 @@ const { expertise } = Astro.props;
 
 <style>
   li {
-    padding-inline: 20px;
-    padding-block: 9px;
+    padding: 9px 20px;
 
     @screen lg {
-      padding-block: 11px;
+      padding-left: 11px;
+      padding-right: 11px;
     }
   }
 
