fix display flex summary for iOS

--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -131,31 +131,35 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                         return (
                           <div class="bg-neutral4 rounded-[26px]">
                             <details data-anchor={`#${definition.slug}`}>
-                              <summary class="px-5 py-4 sm:p-8 flex items-center justify-between space-x-1.5 cursor-pointer">
-                                <h3
-                                  id={definition.slug}
-                                  class="text-headline-small scroll-mt-[135px] lg:scroll-mt-[280px] 2xl:scroll-mt-[220px]"
-                                >
-                                  <span>{definition.term}</span>&nbsp;
-                                  {definition.alternative && (
-                                    <>
-                                      <br />
-                                      {definition.alternative}
-                                    </>
-                                  )}
-                                </h3>
-                                <div class="flex items-center space-x-1 h-[34px] px-2 sm:px-4 bg-surface5 rounded-[100px] text-label-small hover:shadow-[inset_0_0_0_1px] hover:shadow-primary focus:outline focus:outline-offset-[3px] focus:outline-[3px] focus:outline-secondary">
-                                  <span class="max-sm:hidden open">Ouvrir</span>
+                              <summary class="px-5 py-4 sm:p-8 cursor-pointer">
+                                <div class="flex items-center justify-between space-x-1.5">
+                                  <h3
+                                    id={definition.slug}
+                                    class="text-headline-small scroll-mt-[135px] lg:scroll-mt-[280px] 2xl:scroll-mt-[220px]"
+                                  >
+                                    <span>{definition.term}</span>&nbsp;
+                                    {definition.alternative && (
+                                      <>
+                                        <br />
+                                        {definition.alternative}
+                                      </>
+                                    )}
+                                  </h3>
+                                  <div class="flex items-center space-x-1 h-[34px] px-2 sm:px-4 bg-surface5 rounded-[100px] text-label-small hover:shadow-[inset_0_0_0_1px] hover:shadow-primary focus:outline focus:outline-offset-[3px] focus:outline-[3px] focus:outline-secondary">
+                                    <span class="max-sm:hidden open">
+                                      Ouvrir
+                                    </span>
 
-                                  <span class="max-sm:hidden close">
-                                    Fermer
-                                  </span>
+                                    <span class="max-sm:hidden close">
+                                      Fermer
+                                    </span>
 
-                                  <Icon
-                                    name="expand_more"
-                                    width={32}
-                                    height={32}
-                                  />
+                                    <Icon
+                                      name="expand_more"
+                                      width={32}
+                                      height={32}
+                                    />
+                                  </div>
                                 </div>
                               </summary>
                               <div class="flex flex-col space-y-8 px-5 py-4 sm:px-8 sm:pb-8 pt-0">
