fix header sticky on iOS

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -133,6 +133,8 @@ import NavItems from "./NavItems.astro";
 
 <style>
   header {
+    position: -webkit-sticky;
+
     :global([astro-icon="cross"]),
     .text-opened {
       display: none;
