--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -205,6 +205,10 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
 </section>
 
 <style>
+  #sticky-letters-nav {
+    position: -webkit-sticky;
+  }
+
   .sticky-letter {
     @apply mt-2;
   }
