fix submenu spacing

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -59,14 +59,16 @@ const urlPageTitles = new Map([
 
 <style>
   ul {
+    @apply space-x-[4px];
+
     display: flex;
     align-items: center;
-    gap: 4px;
 
     li {
+      @apply space-x-[4px];
+
       display: flex;
       align-items: center;
-      gap: 4px;
     }
 
     a {
