fix useless flex

--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -16,7 +16,7 @@ import Profile from "./Profile.astro";
       <Profile profile={dataYuna}>
         <div
           slot="picture"
-          class="flex flex-[0_0_129px] lg:flex-[0_0_142px] lg:justify-center relative isolate"
+          class="flex lg:flex-[0_0_142px] lg:justify-center relative isolate"
         >
           <Brush
             id="1"
@@ -35,7 +35,7 @@ import Profile from "./Profile.astro";
       <Profile profile={dataDaniela}>
         <div
           slot="picture"
-          class="flex flex-[0_0_129px] lg:flex-[0_0_164px] lg:justify-center relative isolate"
+          class="flex lg:flex-[0_0_164px] lg:justify-center relative isolate"
         >
           <Brush
             id="2"
