fix common hero page mt

--- a/src/pages/demarche-eco-conception/index.astro
+++ b/src/pages/demarche-eco-conception/index.astro
@@ -17,7 +17,7 @@ import Footer from "../../components/Footer.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-[60px]">
+  <div class="max-lg:mt-[60px] mb-[60px]">
     <Hero />
   </div>
 
