--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -18,7 +18,7 @@ import ScrollToTop from "../../components/ScrollToTop/index.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-[60px]">
+  <div class="max-lg:mt-[60px] mb-[60px]">
     <Hero />
   </div>
 
