--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -20,7 +20,7 @@ import Signatures from "../../components/pages/notre-manifeste/Signatures.astro"
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-20 lg:mb-[140px]">
+  <div class="max-lg:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
