--- a/src/pages/temoignages/index.astro
+++ b/src/pages/temoignages/index.astro
@@ -17,7 +17,7 @@ import Layout from "../../layouts/Layout.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-sm:mt-[60px] mb-20 lg:mb-[140px]">
+  <div class="max-lg:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
