--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -17,7 +17,7 @@ import Content from "../../components/pages/mentions-legales/Content.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-[60px]">
+  <div class="max-lg:mt-[60px] mb-[60px]">
     <Hero />
   </div>
 
