--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -17,7 +17,7 @@ import Layout from "../../layouts/Layout.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-[60px] lg:mb-20">
+  <div class="max-lg:mt-[60px] mb-[60px] lg:mb-20">
     <Hero />
   </div>
 
