--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -18,7 +18,7 @@ import ScrollToTop from "../../components/ScrollToTop/index.astro";
     <Breadcrumb />
   </div>
 
-  <div class="max-md:mt-[60px] mb-20 lg:mb-[140px]">
+  <div class="max-lg:mt-[60px] mb-20 lg:mb-[140px]">
     <Hero />
   </div>
 
