--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -28,7 +28,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
           Nous livrons un design accessible et le plus sobre possible.
         </p>
 
-        <CallToAction href="/projets" rightIcon="forward">
+        <CallToAction class="relative z-1" href="/projets" rightIcon="forward">
           Découvrir nos projets
         </CallToAction>
       </div>
