fix flickering letter in glossaire iOS

--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -206,7 +206,8 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
 
 <style>
   #sticky-letters-nav {
-    position: -webkit-sticky;
+    position: fixed;
+    width: 100%;
   }
 
   .sticky-letter {
