fix mobile header bg color for iOS

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -133,6 +133,8 @@ import NavItems from "./NavItems.astro";
 
 <style>
   header {
+    @apply bg-surface1;
+
     position: -webkit-sticky;
 
     :global([astro-icon="cross"]),
