fix copy text on iOS

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,7 +2,7 @@
 import Grid from "./@common/Grid.astro";
 import Brush from "./@common/Brush.astro";
 import BackgroundForm1 from "./BackgroundForm1.astro";
-import ButtonCopyText from "./ButtonCopyText.astro";
+import ButtonCopyText from "./ButtonCopyText/index.astro";
 import CallToAction from "./@common/CallToAction.astro";
 
 interface Props {
