--- a/src/components/ButtonCopyText/index.astro
+++ b/src/components/ButtonCopyText/index.astro
@@ -1,5 +1,5 @@
 ---
-import CallToAction from "./@common/CallToAction.astro";
+import CallToAction from "../@common/CallToAction.astro";
 
 interface Props {
   label: string;
@@ -43,6 +43,18 @@ const {
     toast.classList.add("hide");
   }
 
+  function copyText(text: string) {
+    if (!navigator.clipboard) {
+      return import("./scripts/fallback.copyText").then(
+        ({ fallbackCopyText }) => {
+          return fallbackCopyText(text);
+        },
+      );
+    } else {
+      return navigator.clipboard.writeText(textToCopy);
+    }
+  }
+
   // Hack for Safari not replaying the animation when we click on the button several times.
   // Removing classes after the animation allows the toast to appear again.
   toast.addEventListener("animationend", () => {
@@ -60,7 +72,7 @@ const {
       toastContent.textContent = toastCopySuccessText;
 
       try {
-        await navigator.clipboard.writeText(textToCopy);
+        await copyText(textToCopy);
         await showToast();
       } catch (err) {
         console.error("Failed to copy text:", textToCopy, err);
