--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -4,7 +4,7 @@ import { slugify } from "../../../scripts/helpers/slugify";
 import Grid from "../../@common/Grid.astro";
 import Icon from "../../@common/Icon.astro";
 import Letter from "./Letter.astro";
-import ButtonCopyText from "../../ButtonCopyText.astro";
+import ButtonCopyText from "../../ButtonCopyText/index.astro";
 
 const totalDefinitions = data.length;
 const allLetters = [
