glossaire svg spacing

--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -145,7 +145,7 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                                       </>
                                     )}
                                   </h3>
-                                  <div class="flex items-center space-x-1 h-[34px] px-2 sm:px-4 bg-surface5 rounded-[100px] text-label-small hover:shadow-[inset_0_0_0_1px] hover:shadow-primary focus:outline focus:outline-offset-[3px] focus:outline-[3px] focus:outline-secondary">
+                                  <div class="flex items-center sm:space-x-1 h-[34px] px-2 sm:px-4 bg-surface5 rounded-[100px] text-label-small hover:shadow-[inset_0_0_0_1px] hover:shadow-primary focus:outline focus:outline-offset-[3px] focus:outline-[3px] focus:outline-secondary">
                                     <span class="max-sm:hidden open">
                                       Ouvrir
                                     </span>
