img auto height

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -53,15 +53,11 @@ const { block1, block2 } = data;
         >
           <h3 class="text-headline-medium-bold">{block2.title}</h3>
           <div class="relative w-[200px] lg:w-auto mx-auto lg:mx-0">
-            <Brush
-              alt=""
-              id="1"
-              class="w-[133px] h-[160px] lg:w-[173px] lg:h-[206px]"
-            />
+            <Brush alt="" id="1" class="w-[133px] lg:w-[173px]" />
             <Brush
               alt=""
               id="4"
-              class="absolute top-0 left-[41px] lg:left-[52px] w-[160px] h-[160px] lg:w-[207px] lg:h-[206px]"
+              class="absolute top-0 left-[41px] lg:left-[52px] w-[160px] lg:w-[207px]"
             />
           </div>
           <p class="text-body-medium">{block2.paragraph}</p>
