--- a/src/components/Daniela.astro
+++ b/src/components/Daniela.astro
@@ -1,5 +1,5 @@
 ---
-import Image from "../@common/Image.astro";
+import Image from "./@common/Image.astro";
 
 const { width, height, class: cssClasses } = Astro.props;
 ---
