--- a/src/components/DuoDeChoc.astro
+++ b/src/components/DuoDeChoc.astro
@@ -1,7 +1,7 @@
 ---
 import Brush from "./@common/Brush.astro";
-import PictureYuna from "./images/Yuna.astro";
-import PictureDaniela from "./images/Daniela.astro";
+import PictureYuna from "./Yuna.astro";
+import PictureDaniela from "./Daniela.astro";
 interface Props {
   variant: "small" | "big";
 }
