--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -3,8 +3,8 @@ import dataYuna from "../../../data/nos-deux-profils/yuna.yaml";
 import dataDaniela from "../../../data/nos-deux-profils/daniela.yaml";
 import Grid from "../../@common/Grid.astro";
 import Brush from "../../@common/Brush.astro";
-import Yuna from "../../images/Yuna.astro";
-import Daniela from "../../images/Daniela.astro";
+import Yuna from "../../Yuna.astro";
+import Daniela from "../../Daniela.astro";
 import Profile from "./Profile.astro";
 ---
 
