--- a/src/components/pages/glossaire-ux-design/Hero.astro
+++ b/src/components/pages/glossaire-ux-design/Hero.astro
@@ -5,7 +5,7 @@ import CommonPageHero from "../../CommonPageHero.astro";
 <div>
   <CommonPageHero
     title="Glossaire de l’UX design"
-    subtitle="Vous trouvez que le vocabulaire de l'UX design est dense ? Pas de panique, nous avons rédigé ce glossaire pour clarifier certains termes, que nous utilisons parfois pour parler d’un outil, d’un livrable, ou d’une méthode de travail."
+    subtitle="Vous trouvez que le vocabulaire de l'UX design est dense ? Pas de panique, nous avons rédigé ce glossaire pour clarifier des termes que nous utilisons parfois pour parler d’un outil, d’un livrable ou d’une méthode de travail."
     showBackgroundForm={false}
   />
 </div>
